Add basic-proxy-impl & update code/doc in basic-proxy-introduction